test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/goto_backwards.plx
pub fn main(none) i32 {
    if 0 {
        label label
        return 5
    }
    jump label
    return 0
}
