test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/empty_if_body.plx
pub fn main(none) i32 {
    if 0 {

    }
    else {
        return 0
    }
}
